# legal-contract-risk-scorer

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py
environment/: __init__.py  contract_data.py  env.py  graders.py  models.py  tasks.py
server/: app.py
